objects/Trending__c.object
<CustomObject><fields>
        <fullName>Academic_Year_lookup__c</fullName>
        <formula>TEXT(Application__r.Programme__r.Academic_Year__c)</formula>
        <label>Academic Year</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>Student_Programme__c</referenceTo>
        <relationshipName>Trending_Records</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Fee_Status_lookup__c</fullName>
        <formula>TEXT(Application__r.Fee_Status__c)</formula>
        <label>Fee Status</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Historic_Data__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates this record was created via dataloader in historic data mining exercise and not via the Snapshot process</inlineHelpText>
        <label>Historic Data</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Programme_Id__c</fullName>
        <formula>HYPERLINK("/"&amp; Application__r.Programme__r.Id ,  Application__r.Programme__r.Name )</formula>
        <label>Programme</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Programme_Type__c</fullName>
        <formula>Application__r.Programme_Type__c</formula>
        <label>Programme Type</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Record_Count__c</fullName>
        <description>Checks to see whether this week's "Week number" is the same as the week number of the Trending record. If so, 1 is returned. If not, -1 is returned. Field is summed in Trending reports to compare this week from this year vs previous years by summing +ve and -ve numbers to show difference in numbers of applications.</description>
        <formula>IF(Academic_Year_lookup__c="15/16",1,-1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Records_from_this_Week_Number__c</fullName>
        <description>Checks to see if Week Number of record is same as current Week Number. If yes, displays TRUE. Used as filter in Trending reports to show records for this week vs records from the same week in previous years.</description>
        <formula>IF( Week_Number__c = 

IF(MOD(FLOOR( ( TODAY() - DATEVALUE("2006-01-01" ))/7),52)=0,52,MOD(FLOOR( ( TODAY() - DATEVALUE("2001-09-01" ))/7),52))

, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Records from this Week Number</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Registration_Status__c</fullName>
        <formula>CASE(Stage__c, 
"Accepted", "Planned",
"Unconditional", "Planned",
"Conditional", "Planned",
"Expected", "Planned",
"Pre-Registered", "Planned",
"Registered", "Registered",
"Complete", "Registered",
"N/A")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Registration Status</label>
        <type>Text</type>
    </fields><fields>
        <fullName>SIS_Snapshot_Event__c</fullName>
        <formula>"Y"&amp;TEXT(SIS_Year__c)&amp;"-W"&amp;TEXT(SIS_Week_Number__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SIS Snapshot Event</label>
        <type>Text</type>
    </fields><fields>
        <fullName>SIS_Week_Number__c</fullName>
        <label>SIS Week Number</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>SIS_Year__c</fullName>
        <label>SIS Year</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>Snapshot_Date__c</fullName>
        <label>Snapshot Date</label>
        <type>DateTime</type>
    </fields><fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incomplete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Checked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reviewed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conditional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unconditional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reject</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Registered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Registered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deferred</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Withdrawn</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Student_Id__c</fullName>
        <formula>HYPERLINK("/"&amp; Application__r.Student__r.Id ,  Application__r.Student__r.FirstName &amp;" "&amp;Application__r.Student__r.LastName )</formula>
        <label>Student</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Submission_Date__c</fullName>
        <formula>Application__r.Submission_Date__c</formula>
        <label>Submission Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Test_Record__c</fullName>
        <formula>Application__r.Test_Record__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Test Record</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Week_Number__c</fullName>
        <formula>IF(MOD(FLOOR( ( DATEVALUE(Snapshot_Date__c)  - DATEVALUE("2006-09-01" ))/7),52)=0,52,MOD(FLOOR( ( DATEVALUE(Snapshot_Date__c)  - DATEVALUE("2006-09-01" ))/7),52))</formula>
        <inlineHelpText>Shows week number within Calendar year</inlineHelpText>
        <label>Week Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><description>To facilitate trending of applications per period and stage; this object stores the prior values and is populated via an analytical snapshot</description><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>Private</externalSharingModel><label>Trending Record</label><nameField>
        <displayFormat>TR-{0000000}</displayFormat>
        <label>Trending Record Name</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>Trending Records</pluralLabel><sharingModel>ReadWrite</sharingModel><listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Application__c</columns>
        <columns>Stage__c</columns>
        <columns>Submission_Date__c</columns>
        <columns>Snapshot_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews><listViews>
        <fullName>Draft_Applications_Last_Week</fullName>
        <columns>NAME</columns>
        <columns>Application__c</columns>
        <columns>Student_Id__c</columns>
        <columns>Stage__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>Draft</value>
        </filters>
        <filters>
            <field>Snapshot_Date__c</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>Draft Applications - Last Week</label>
    </listViews><listViews>
        <fullName>Draft_Applications_This_Week</fullName>
        <columns>NAME</columns>
        <columns>Application__c</columns>
        <columns>Student_Id__c</columns>
        <columns>Stage__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>equals</operation>
            <value>Draft</value>
        </filters>
        <filters>
            <field>Snapshot_Date__c</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>Draft Applications - This Week</label>
    </listViews><listViews>
        <fullName>Non_Draft_Applications_Last_Week</fullName>
        <columns>NAME</columns>
        <columns>Application__c</columns>
        <columns>Student_Id__c</columns>
        <columns>Stage__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>notEqual</operation>
            <value>Draft</value>
        </filters>
        <filters>
            <field>Snapshot_Date__c</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>Non Draft Applications - Last Week</label>
    </listViews><listViews>
        <fullName>Non_Draft_Applications_This_Week</fullName>
        <columns>NAME</columns>
        <columns>Application__c</columns>
        <columns>Student_Id__c</columns>
        <columns>Stage__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Stage__c</field>
            <operation>notEqual</operation>
            <value>Draft</value>
        </filters>
        <filters>
            <field>Snapshot_Date__c</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>Non Draft Applications - This Week</label>
    </listViews></CustomObject>